# ofr-ui-demo

./: CMakeLists.txt  partitions.csv  sdkconfig
main/: CMakeLists.txt  TFT_eSPI_setup.h  main.cpp
